--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WashConnectDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-U1OM050\\SQLEXPRESS01;Database=Wash;Trusted_Connection=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
